<resources>
    <string name="app_name">IP Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_settings">Settings</string>
    <string name="action_reg">Registration</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_player">Go player</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="anim">Animate</string>
</resources>