<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_player"
        android:onClick="showPlayer"
        android:orderInCategory="100"
        android:title="@string/action_player"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_registration"
        android:onClick="showRegistration"
        android:orderInCategory="100"
        android:title="@string/action_reg"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:onClick="showLogin"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>